--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -28,15 +28,15 @@
           <meta name="description" content="{{config.settings.website_description}}">
           <meta property="og:description" content="{{config.settings.website_description}}" />
         {{else}}
-          <meta name="description" content="{{__ "Powered by"}} openKB">
-          <meta property="og:description" content="openKB is an Open Source Node.js Markdown based knowledge base/FAQ/Wiki app with powerful lunr search" />
+          <meta name="description" content="{{__ "Powered by"}} WittyKB">
+          <meta property="og:description" content="WittyKB is the knowledge base platform that powers WittyPen Support website" />
         {{/ifCond}}
       {{/if}}
     {{/if}}
     {{#if result.kb_keywords}}
       <meta name="keywords" content="{{result.kb_keywords}}">
     {{else}}
-      <meta name="keywords" content="openKB">
+      <meta name="keywords" content="WittyKB">
     {{/if}}
     <meta property="og:type" content="article" />
     <meta property="og:image" content="{{current_url}}/logo.png" />
@@ -169,7 +169,7 @@
     {{#if show_footer}}
       <footer class="footer">
         <div class="container">
-          <p class="text-muted">{{__ "Powered by"}} <a href="http://openkb.mrvautin.com/" target="_blank">openKB</a></p>
+          <p class="text-muted">WittyPen Media Services Pvt. Ltd.</p>
         </div>
       </footer>
     {{/if}}
