:lipstick: :speech_balloon: update footer; :wrench: update config

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -169,7 +169,7 @@
     {{#if show_footer}}
       <footer class="footer">
         <div class="container">
-          <p class="text-muted">WittyPen Media Services Pvt. Ltd.</p>
+          <p class="text-muted">WittyPen Media Services Pvt. Ltd. &bull; <a href="http://wittypen.com">home</a> &bull; <a href="https://wittypen.com/wp-content/uploads/Wittypen%20-%20Terms%20of%20Use%20-%20Clean.pdf" target="_blank">terms of use</a></p>
         </div>
       </footer>
     {{/if}}
